k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: imagepin
  name: imagepin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imagepin
  template:
    metadata:
      labels:
        app: imagepin
    spec:
      containers:
      - args:
        - npm
        - start
        image: quay.io/hiphipjorge/imagepin_server:latest
        imagePullPolicy: Always
        name: imagepin
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config-vol
          mountPath: /app/config
      volumes:
      - name: config-vol
        configMap:
          name: image-pin-config
