k8s/rethinkdb-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rethinkdb-admin-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    db: rethinkdb
  sessionAffinity: None
  type: ClusterIP
