k8s/rethinkdb-db-access.yaml
apiVersion: v1
kind: Service
metadata:
  name: rethinkdb-db-access
spec:
  ports:
  - port: 28015
    protocol: TCP
    targetPort: 28015
  selector:
    db: rethinkdb
