k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagepin
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: imagepin
