k8s/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "public"
  name: main-ingress-imagepin
spec:
  rules:
  - host: image-pin.thejsj.com
    http:
      paths:
      - backend:
          serviceName: imagepin
          servicePort: 80
        path: /
